# rust-authenticator

./: Cargo.toml  README.md
src/: api.rs  main.rs  options.rs  response.rs
src/api/: resource.rs  session.rs
